--- a/client/src/assets/css/config.scss
+++ b/client/src/assets/css/config.scss
@@ -61,6 +61,9 @@ html {
                 display: flex;
                 flex-direction: column;
                 width: 0%;
+                right: 0;
+                position: absolute;
+                z-index: 10;
                 // min-height: 100vh;
                 // height: 100%;
 
